--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,7 @@ header > p{
     padding-right: 10px;
     margin: auto ;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);
-    margin-bottom: 20px;
+    padding-bottom: 50px;
 }
 
 nav{
